--- a/website/home/templates/home/base.html
+++ b/website/home/templates/home/base.html
@@ -438,7 +438,7 @@
             class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="{% url 'about' %}" style="color: white;"><b>About</b></a>
         <a class="nav-item nav-link" href="{% url 'contact' %}" style="color: white;"><b>Contact</b></a>
-        <a class="nav-item nav-link" href="#" style="color: white;"><b>Blog</b></a>
+        <a class="nav-item nav-link" href="/blog" style="color: white;"><b>Blog</b></a>
       </div>
     </div>
 
@@ -446,7 +446,7 @@
   {% block body %}{% endblock %}
 
   <section class="follow" style="margin-right: 50%;">
-    <p>Follow Microsoft</p>
+    <p>Follow goXplor</p>
     <a href="https://facebook.com">
       <img class="follow-image" src="/static/home/images/facebook.png" alt="Facebook" />
     </a>
