--- a/website/home/templates/home/about.html
+++ b/website/home/templates/home/about.html
@@ -1,10 +1,63 @@
 {% extends "home/base.html" %}
 {% block body %}
-<P>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus modi voluptatibus sunt voluptatum similique
-    reiciendis at repellat eos ullam? Corporis adipisci quaerat quae ratione quis modi enim sequi vel accusamus.
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-md-8 blog-main">
+            <P>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus modi voluptatibus sunt voluptatum
+                similique
+                reiciendis at repellat eos ullam? Corporis adipisci quaerat quae ratione quis modi enim sequi vel
+                accusamus.
+                What is Lorem Ipsum?
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard
+                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                a type specimen
+                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                essentially
+                unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                passages, and more
+                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+
+
+            </P>
+        </div>
+
+
+        <aside class="col-md-4 blog-sidebar">
+            <div class="p-4 mb-3 bg-light rounded">
+                <h4 class="font-italic">About</h4>
+                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                    has been the industry's standard
+                    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+                    make a type specimen
+                    book. It has survived not only five centuries, but also the leap into electronic typesetting,
+                    remaining essentially
+                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                    Ipsum passages, and more
+                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+            </div>
 
 
 
-</P>
+            <div class="p-4">
+                <h4 class="font-italic">Follow Us</h4>
+
+                <a href="https://facebook.com">
+                    <img class="follow-image" src="/static/home/images/facebook.png" alt="Facebook" />
+                </a>
+                <a href="https://twitter.com">
+                    <img class="follow-image" src="/static/home/images/twitter.png" alt="Twitter" />
+                </a>
+                <a href="https://instagram.com">
+                    <img class="follow-image" src="/static/home/images/instagram.png" alt="Instagram" />
+                </a>
+                <a href="https://youtube.com">
+                    <img class="follow-image" src="/static/home/images/youtube.png" alt="Youtube" />
+                </a>
+
+            </div>
+        </aside>
+    </div>
+</div>
 {% endblock %}
