--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -140,6 +140,8 @@
             }
         }
     </style>
+    <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0"></script>
 </head>
 
 <body>
