--- a/website/blog/templates/blog/blogpost.html
+++ b/website/blog/templates/blog/blogpost.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% block title %}goXplor{% endblock %}
 {% block body %}
 <div class="container">
     <div class="row mt-4">
@@ -19,7 +19,10 @@
                 <p>{{post.chead1}}</p>
                 <h2>{{post.head2}}</h2>
                 <p>{{post.chead2}}</p>
-
+                <div class="fb-like" data-href="http://127.0.0.1:8000/blog/blog-post/{{post.post_id}}" data-width=""
+                    data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+                <div class="fb-comments" data-href="http://127.0.0.1:8000/blog/blog-post/{{post.post_id}}" data-width=""
+                    data-numposts="5"></div>
 
             </div><!-- /.blog-post -->
 
@@ -41,7 +44,8 @@
                     Ipsum passages, and more
                     recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
             </div>
-
+            <div class="fb-like" data-href="http://127.0.0.1:8000/blog/blog-post/{{post.post_id}}" data-width=""
+                data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
 
 
             <div class="p-4">
