--- a/website/home/templates/home/about.html
+++ b/website/home/templates/home/about.html
@@ -1,8 +1,16 @@
 {% extends "home/base.html" %}
+{% block title %}goXplor{% endblock %}
 {% block body %}
+
+<div class="container-fluid">
+    <img style="    height: 47vh;
+    width: 100%;" src="/static/home/images/himalaya.jpg" alt="image" />
+</div>
 <div class="container">
     <div class="row mt-4">
         <div class="col-md-8 blog-main">
+
+            <h2>About US</h2>
             <P>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus modi voluptatibus sunt voluptatum
                 similique
