--- a/website/home/templates/home/contact.html
+++ b/website/home/templates/home/contact.html
@@ -2,11 +2,15 @@
 
 {% block title %}goXplor{% endblock %}
 {% block body %}
+<div class="container-fluid">
+    <img style="    height: 47vh;
+    width: 100%;" src="/static/home/images/himalaya1.jpg" alt="image" />
+</div>
 <div class="container">
     <div class="row mt-4">
-        <div class="col-md-8 blog-main" style="margin-top: 15vh;">
+        <div class="col-md-8 blog-main">
 
-            <h3>Contact Us</h3>
+            <h3 style="font-weight: bold;">Contact Us</h3>
             <form action="/contact/" method="post">{% csrf_token %}
                 <div class="form-group">
                     <label for="name">Name</label>
