--- a/website/home/templates/home/about.html
+++ b/website/home/templates/home/about.html
@@ -12,20 +12,27 @@
 
             <h2>About US</h2>
             <P>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus modi voluptatibus sunt voluptatum
-                similique
-                reiciendis at repellat eos ullam? Corporis adipisci quaerat quae ratione quis modi enim sequi vel
-                accusamus.
-                What is Lorem Ipsum?
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard
-                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-                a type specimen
-                book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                essentially
-                unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                passages, and more
-                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                Xyz holidays one of the sikkim tour packages is basically located in gangtok, sikkim. We are basically
+                focusing on a
+                business on offering a best tour packages in and around sikkim, where people will have plenty of options
+                when it comes
+                to exploring this tiny and beautifull state of India. We will assist you if the trip would be a short
+                trip or a trip
+                that may span over few weeks, our team will be there always to help you out.
+
+                We can assure you the best travel packages which would be based on your needs, requirements and above
+                all the budget.
+                Xyz holidays understands that every holiday would be different according to every person with different
+                needs. That’s
+                why our team would be dedicated always to provide quality and value every time.
+
+                If you work closely with us and have faith on us, you will be quite impressed with the detail of our
+                work that we
+                deliver. We are travel enthusiast at the moment and we provide domestic packages. We are communicative,
+                through which
+                you all can clear all your doubts before getting any kind of package. We want our customers to come
+                happily and enjoy
+                their holidays.
 
 
             </P>
@@ -34,16 +41,34 @@
 
         <aside class="col-md-4 blog-sidebar">
             <div class="p-4 mb-3 bg-light rounded">
-                <h4 class="font-italic">About</h4>
-                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                    has been the industry's standard
-                    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-                    make a type specimen
-                    book. It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining essentially
-                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                    Ipsum passages, and more
-                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                <h4 class="font-italic">Salient features about xyz holidays-</h4>
+                <p class="mb-0">
+                    <ol>
+                        <li>
+                            Xyz holidays is fully approved, registered.
+                        </li>
+                        <li>
+                            Xyz holidays itself is run by local expertise. So it plays an importanrt role here as we can
+                            recommend you with the
+                            memorable and autherntic experience to the holidays.
+
+                        </li>
+                        <li>
+                            Xyz holidays will be available all the time if you want an individual help, from shopping to
+                            clubbing.
+
+                        </li>
+                        <li>
+                            Xyz holidays also promises you to meet and greet personally so that we can have a strong
+                            connection with the customers.
+
+                        </li>
+                        <li>
+                            Xyz holidays does not believe on middlemen, so we always pass the savings on to you.
+
+                        </li>
+                    </ol>
+                </p>
             </div>
 
 
