--- a/website/blog/templates/blog/base.html
+++ b/website/blog/templates/blog/base.html
@@ -139,6 +139,22 @@
                 color: rgb(255, 255, 255);
             }
         }
+
+        #top {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            border: none;
+            outline: none;
+
+            cursor: pointer;
+            padding: 10px 15px;
+            border-radius: 20%;
+            font-size: 20px;
+            background-image: linear-gradient(#333333, #969696);
+        }
     </style>
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0"></script>
@@ -182,6 +198,10 @@
     </section>
     </div>
 
+    <!-- back to top -->
+    <button onclick="topFunction()" id="top" style="display: block;"><i style="color: #ffffff;"
+            aria-hidden="true">Top</i></button>
+
     <!-- Footer -->
     <footer class="footer mt-auto py-3">
         <div class="footer-inner">
@@ -193,7 +213,7 @@
 
                 <li><a class="footer-link" href="#">&copy; All Rigths Reserved 2020</a></li>
             </ul>
-            <p class="float-right footer-link"><a href="#">Back to top</a></p>
+            <div><i class="fas fa-globe fa-2x"></i>&copy; All Rigths Reserved 2020</div>
         </div>
     </footer>
 
@@ -216,6 +236,27 @@
                 }
             });
         });
+
+        // back to top function
+        //Get the button
+        var mybutton = document.getElementById("top");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
     </script>
     {% block js %}{% endblock %}
 </body>
