--- a/website/home/templates/home/base.html
+++ b/website/home/templates/home/base.html
@@ -126,8 +126,14 @@
     .home {
       height: 50em;
 
-      overflow-x: hidden;
+      overflow-y: scroll;
+
       position: relative;
+    }
+
+
+    .home::-webkit-scrollbar {
+      display: none;
     }
 
     .home .slide {
@@ -422,6 +428,179 @@
         color: rgb(255, 255, 255);
       }
     }
+
+    /*Inquiry*/
+
+
+    /* Full-width input fields */
+    input[type=text],
+    input[type=email] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+      width: auto;
+      padding: 10px 18px;
+      background-color: #f44336;
+    }
+
+
+
+    .container {
+      padding: 16px;
+    }
+
+    span.email {
+      float: right;
+      padding-top: 16px;
+    }
+
+    /* The Modal (background) */
+    .modal {
+      display: none;
+      /* Hidden by default */
+      position: fixed;
+      /* Stay in place */
+      z-index: 1;
+      /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: hidden;
+      /* Enable scroll if needed */
+      background-color: rgb(0, 0, 0);
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4);
+      /* Black w/ opacity */
+      padding-top: 60px;
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #fefefe;
+      margin: 5% auto 15% auto;
+      /* 5% from the top, 15% from the bottom and centered */
+      border: 1px solid #888;
+      width: 300px;
+      /* Could be more or less, depending on screen size */
+    }
+
+    /* The Close Button (x) */
+    .close {
+      position: absolute;
+      right: 25px;
+      top: 0;
+      color: #000;
+      font-size: 35px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: red;
+      cursor: pointer;
+    }
+
+    /* Add Zoom Animation */
+    .animate {
+      -webkit-animation: animatezoom 0.6s;
+      animation: animatezoom 0.6s
+    }
+
+    @-webkit-keyframes animatezoom {
+      from {
+        -webkit-transform: scale(0)
+      }
+
+      to {
+        -webkit-transform: scale(1)
+      }
+    }
+
+    @keyframes animatezoom {
+      from {
+        transform: scale(0)
+      }
+
+      to {
+        transform: scale(1)
+      }
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+      span.email {
+        display: block;
+        float: none;
+      }
+
+      .cancelbtn {
+        width: 100%;
+      }
+    }
+
+    .inquiry {
+      cursor: poiner;
+      padding: 10px 15px;
+      border-radius: 10px 0 0 10px;
+      position: fixed;
+      bottom: 200px;
+      right: 0px;
+      z-index: 100000;
+      color: white;
+      background-color: #333333;
+    }
+
+    .inquiry:hover {
+      background-image: linear-gradient(#333333, rgb(221, 216, 216));
+    }
+
+    #top {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      z-index: 99;
+      border: none;
+      outline: none;
+
+      cursor: pointer;
+      padding: 10px 15px;
+      border-radius: 20%;
+      font-size: 20px;
+      background-image: linear-gradient(#333333, #969696);
+    }
+
+    .card-offer {
+
+      display: block;
+      position: absolute;
+      right: 30px;
+      line-height: 0px;
+      text-align: center;
+      padding: 5px;
+      margin-top: -5px;
+      background: #fff;
+      color: #262626;
+      font-weight: bold;
+      transition: .5s;
+
+    }
   </style>
 </head>
 
@@ -445,7 +624,46 @@
   </nav>
   {% block body %}{% endblock %}
 
-  <section class="follow" style="margin-right: 50%;">
+  <button class="inquiry" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
+    <div>I</div>
+    <div>N</div>
+    <div>Q</div>
+    <div>U</div>
+    <div>I</div>
+    <div>R</div>
+    <div>Y</div>
+  </button>
+
+  <div id="id01" class="modal">
+
+    <form class="modal-content animate" action="/inquiry/" method="post">{% csrf_token %}
+      <span onclick="document.getElementById('id01').style.display='none'" class="close"
+        title="Close Modal">&times;</span>
+      <div class="container">
+        <label for="name"><b>Name</b></label>
+        <input type="text" placeholder="Enter Name" name="name" required>
+
+        <label for="email"><b>Email</b></label>
+        <input type="email" placeholder="Enter Email" name="email" required>
+
+        <label for="phone"><b>Contact us</b></label>
+        <input type="text" placeholder="Enter Contact number" name="phone" required>
+
+
+
+        <button class="btn btn-primary " style="width: 100%;" type="submit">Submit</button>
+
+      </div>
+
+      <div class="container" style="background-color:#f1f1f1">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'"
+          class="btn btn-danger">Cancel</button>
+
+      </div>
+    </form>
+  </div>
+
+  <section class=" follow" style="margin-right: 50%;">
     <p>Follow goXplor</p>
     <a href="https://facebook.com">
       <img class="follow-image" src="/static/home/images/facebook.png" alt="Facebook" />
@@ -461,7 +679,9 @@
     </a>
   </section>
   </div>
-
+  <!-- back to top -->
+  <button onclick="topFunction()" id="top" style="display: block;"><i style="color: #ffffff;"
+      aria-hidden="true">Top</i></button>
   <!-- Footer -->
   <footer class="footer mt-auto py-3">
     <div class="footer-inner">
@@ -471,9 +691,9 @@
 
         <li><a class="footer-link" href="{% url 'about' %}">Terms of use</a></li>
 
-        <li><a class="footer-link" href="#">&copy; All Rigths Reserved 2020</a></li>
       </ul>
-      <p class="float-right footer-link"><a href="#">Back to top</a></p>
+
+      <div><i class="fas fa-globe fa-2x"></i>&copy; All Rigths Reserved 2020</div>
     </div>
   </footer>
 
@@ -496,6 +716,27 @@
         }
       });
     });
+    // back to top function
+    //Get the button
+    var mybutton = document.getElementById("top");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+
   </script>
   {% block js %}{% endblock %}
 </body>
