--- a/website/home/templates/home/index.html
+++ b/website/home/templates/home/index.html
@@ -39,7 +39,7 @@
     <div class="ftco-section bg-light" id="cards">
       <div class="container card-styles">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card">
               <div class="icon-wrap px-4 pt-4">
                 <div class="icon d-flex justify-content-center align-items-center bg-info rounded-circle">
@@ -47,15 +47,15 @@
                 </div>
               </div>
               <div class="card-body pb-5 px-4">
-                <h5 class="card-title">Card title treatment</h5>
+                <h5 class="card-title" style="font-weight: bolder;">East Sikkim</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
                   river
                   named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="#" class="btn btn-info">Go somewhere</a>
+                <a href="#" class="btn btn-info">Find Packages</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card">
               <div class="icon-wrap px-4 pt-4">
                 <div class="icon d-flex justify-content-center align-items-center bg-success rounded-circle">
@@ -63,15 +63,15 @@
                 </div>
               </div>
               <div class="card-body pb-5 px-4">
-                <h5 class="card-title">Card title treatment</h5>
+                <h5 class="card-title" style="font-weight: bolder;">West Sikkim</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
                   river
                   named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
+                <a href="#" class="btn btn-info">Find Packages</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card">
               <div class="icon-wrap px-4 pt-4">
                 <div class="icon d-flex justify-content-center align-items-center bg-warning rounded-circle">
@@ -79,11 +79,27 @@
                 </div>
               </div>
               <div class="card-body pb-5 px-4">
-                <h5 class="card-title">Card title treatment</h5>
+                <h5 class="card-title" style="font-weight: bolder;">North Sikkim</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
                   river
                   named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <a href="#" class="btn btn-warning">Go somewhere</a>
+                <a href="#" class="btn btn-info">Find Packages</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <div class="icon-wrap px-4 pt-4">
+                <div class="icon d-flex justify-content-center align-items-center bg-warning rounded-circle">
+                  <span class="ion-logo-ionic text-light"></span>
+                </div>
+              </div>
+              <div class="card-body pb-5 px-4">
+                <h5 class="card-title" style="font-weight: bolder;">South Sikkim</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content. A small
+                  river
+                  named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <a href="#" class="btn btn-info">Find Packages</a>
               </div>
             </div>
           </div>
@@ -123,7 +139,7 @@
 
 
   {% for destination, range, nSlides in allDest %}
-  <h5 class="my-4">Flash Sale On {{destination.0.category}} - Recommended Places</h5>
+  <h5 class="my-4" style="font-weight: bolder;">Flash Sale On {{destination.0.category}} -Travel Packages</h5>
   <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
     <ul class="carousel-indicators">
       <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
@@ -141,12 +157,16 @@
         {% for i in destination %}
         <div class="col-xs-3 col-sm-3 col-md-3">
           <div class="card" style="width: 18rem;">
+
             <img src="/media/{{i.image}}" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">{{i.name}}</h5>
-              <p class="card-offer">{{i.offer}}</p>
+
               <p class="card-text">{{i.description}}</p>
-              <a href="#" class="btn btn-primary">Know more</a>
+              <a href="#" class="btn btn-primary">Buy now</a>
+              {% if i.offer %}
+              <p class="card-offer">Special Offer</p>
+              {% endif %}
             </div>
           </div>
         </div>
@@ -169,7 +189,7 @@
   {% endfor %}
 </div>
 <section class="container" style="margin-top: 40px;">
-  <h3 style="text-align: center;">Why Choose Us..</h3>
+  <h3 style="text-align: center; font-weight:bolder;">Why Choose Us..</h3>
   <div class="row">
     <div class="column">
       <div class="card1">
@@ -182,8 +202,8 @@
     <div class="column">
       <div class="card1">
         <p><i class="fa fa-check"></i></p>
-        <h3>55+</h3>
-        <p>Projects</p>
+        <h3>20+</h3>
+        <p>Places</p>
       </div>
     </div>
 
@@ -191,7 +211,7 @@
       <div class="card1">
         <p><i class="fa fa-smile-o"></i></p>
         <h3>100+</h3>
-        <p>Happy Clients</p>
+        <p>Happy Travellers</p>
       </div>
     </div>
 
@@ -199,7 +219,7 @@
       <div class="card1">
         <p><i class="fa fa-coffee"></i></p>
         <h3>100+</h3>
-        <p>Meetings</p>
+        <p>Sites</p>
       </div>
     </div>
   </div>
@@ -218,7 +238,7 @@
           <div class="row justify-content-start pb-3">
             <div class="col-md-12 heading-section ftco-animate p-5 p-lg-0">
 
-              <h2 class="mb-4">Get Best Travel Deals</h2>
+              <h2 class="mb-4" style="font-weight: bolder;">Get Best Travel Deals</h2>
               <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
                 paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life
