--- a/website/home/templates/home/package.html
+++ b/website/home/templates/home/package.html
@@ -1,77 +1,42 @@
 {% extends "home/base.html" %}
 {% block title %}goXplores{% endblock %}
 {% block body %}
-<div class="ftco-section bg-light" id="cards">
-    <div class="container card-styles">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="icon-wrap px-4 pt-4">
-                        <div class="icon d-flex justify-content-center align-items-center bg-info rounded-circle">
-                            <span class="ion-logo-ionic text-light"></span>
+<div class="album py-5 bg-light">
+    <div class="container">
+        {% for destination, range, nSlides in allPack %}
+        <h5 class="my-4" style="font-weight: bolder;">Flash Sale On {{destination.0.category}} -Travel Packages</h5>
+        <div id="demo{{forloop.counter}}" class="my-3">
+
+
+
+            <div class="row">
+                {% for i in destination %}
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="/media/{{i.image}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{i.name}}</h5>
+                            <p class="card-text">{{i.description}}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Contact</button>
+                                </div>
+                                {% if i.offer %}
+                                <span class="origprice"><strike>₹{{ i.orginalPrice }}</strike></span>
+                                <span class="price">₹{{ i.price }}</span>
+                                <div class="discount">
+                                    <p>{{ i.DiscountCalc }}% off</p>
+                                </div>
+                                {% else %}
+                                <span class="origprice">₹{{ i.orginalPrice }}</span>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body pb-5 px-4">
-                        <h5 class="card-title" style="font-weight: bolder;">East Sikkim</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content. A
-                            small
-                            river
-                            named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        <a href="#" class="btn btn-info">Find Packages</a>
-                    </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="icon-wrap px-4 pt-4">
-                        <div class="icon d-flex justify-content-center align-items-center bg-success rounded-circle">
-                            <span class="ion-logo-ionic text-light"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-5 px-4">
-                        <h5 class="card-title" style="font-weight: bolder;">West Sikkim</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content. A
-                            small
-                            river
-                            named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        <a href="#" class="btn btn-info">Find Packages</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="icon-wrap px-4 pt-4">
-                        <div class="icon d-flex justify-content-center align-items-center bg-warning rounded-circle">
-                            <span class="ion-logo-ionic text-light"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-5 px-4">
-                        <h5 class="card-title" style="font-weight: bolder;">North Sikkim</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content. A
-                            small
-                            river
-                            named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        <a href="#" class="btn btn-info">Find Packages</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <div class="icon-wrap px-4 pt-4">
-                        <div class="icon d-flex justify-content-center align-items-center bg-warning rounded-circle">
-                            <span class="ion-logo-ionic text-light"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-5 px-4">
-                        <h5 class="card-title" style="font-weight: bolder;">South Sikkim</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content. A
-                            small
-                            river
-                            named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        <a href="#" class="btn btn-info">Find Packages</a>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
-    </div>
-    {% endblock %}
+        {% endfor %}
+        {% endblock %}
