--- a/website/home/templates/home/base.html
+++ b/website/home/templates/home/base.html
@@ -619,6 +619,16 @@
         <a class="nav-item nav-link" href="{% url 'contact' %}" style="color: white;"><b>Contact</b></a>
         <a class="nav-item nav-link" href="/blog" style="color: white;"><b>Blog</b></a>
       </div>
+      <form class="form-inline my-2 my-lg-0">
+        <button type="button" class="btn btn-secondary mx-2 my-2 my-lg-0" id="popcart" data-container="body"
+          data-toggle="popover" data-placement="bottom" data-html="true" data-content="Vivamus
+      sagittis lacus vel augue laoreet rutrum faucibus.">
+
+
+          Cart(<span id="cart">0</span>)
+        </button>
+      </form>
+
     </div>
 
   </nav>
