--- a/website/home/templates/home/index.html
+++ b/website/home/templates/home/index.html
@@ -156,7 +156,7 @@
 
         {% for i in destination %}
         <div class="col-xs-3 col-sm-3 col-md-3">
-          <div class="card" style="width: 18rem;">
+          <div class="card align-items-center" style="width: 18rem;">
 
             <img src="/media/{{i.image}}" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -324,6 +324,7 @@
   }
 
   let timer = setInterval(autoplay, 6000);
+
 
 </script>
 {% endblock %}
