--- a/website/home/templates/home/checkout.html
+++ b/website/home/templates/home/checkout.html
@@ -9,17 +9,19 @@
 
             </h4>
             <ul class="list-group mb-3" id="items">
-
             </ul>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                    <h6 class="my-0">Total</h6>
 
-            <!-- <form class="card p-2">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Promo code">
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-secondary">Redeem</button>
-                    </div>
                 </div>
-            </form> -->
+                <h6 style="font-weight: bolder;">₹
+                    <span id="totalPrice"></span>
+                </h6>
+
+            </li>
+
+
         </div>
         <div class="col-md-8 order-md-1">
             <h4 class="mb-3">Billing address</h4>
@@ -118,6 +120,7 @@
     }
     console.log(cart);
     var sum = 0;
+    var totalPrice = 0;
     if ($.isEmptyObject(cart)) {
         //if object is empty
         mystr = `<p>Your cart is empty, please add some items to your cart before checking out!</p>`
@@ -126,7 +129,10 @@
         for (item in cart) {
             let name = cart[item][1];
             let qty = cart[item][0];
+            let itemPrice = cart[item][2];
+            let actPrice = cart[item][3];
             sum = sum + qty;
+            totalPrice = totalPrice + qty * itemPrice;
             mystr = `<li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
                         <h6 class="my-0">${name}</h6>
@@ -136,9 +142,10 @@
                 </li>`
             $('#items').append(mystr);
         }
+
     }
     document.getElementById('cart').innerHTML = sum;
-
+    document.getElementById('totalPrice').innerHTML = totalPrice;
     $('#itemsJson').val(JSON.stringify(cart));
     {% if thank %}
     alert('Thank For Booking, we will get in touch with you soon. Your booking id is {{id}}')
