--- a/website/home/templates/home/package.html
+++ b/website/home/templates/home/package.html
@@ -26,12 +26,16 @@
                                 </div>
                                 {% if i.offer %}
                                 <span class="origprice"><strike>₹{{ i.orginalPrice }}</strike></span>
-                                <span class="price">₹{{ i.price }}</span>
+                                <h6 class="card-title">₹
+                                    <span class="card-title" id="pricepr{{i.id}}">{{i.price}}</span></h6>
                                 <div class="discount">
                                     <p>{{ i.DiscountCalc }}% off</p>
                                 </div>
                                 {% else %}
-                                <span class="origprice">₹{{ i.orginalPrice }}</span>
+                                <h6 class="card-title">
+                                    <span class="card-title" id="pricepr{{i.id}}">{{i.orginalPrice}}</span>
+                                </h6>
+
                                 {% endif %}
                             </div>
                         </div>
@@ -61,7 +65,9 @@
                 } else {
                     qty = 1;
                     name = document.getElementById('name' + idstr).innerHTML;
-                    cart[idstr] = [qty, name];
+                    price = document.getElementById('price' + idstr).innerHTML;
+                    price = document.getElementById('price' + idstr).innerHTML;
+                    cart[idstr] = [qty, name, parseInt(price)];
                 }
                 updateCart(cart);
 
